--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
-  <title>나의 포트폴리오</title>
+  <title>김민지 포트폴리오</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     body {
@@ -55,6 +55,10 @@
       background-color: #333;
       color: white;
     }
+    img {
+      max-width: 100%;
+      border-radius: 8px;
+    }
     a {
       color: #4a90e2;
       text-decoration: none;
@@ -66,47 +70,72 @@
 </head>
 <body>
   <header>
-    <h1>홍길동</h1>
-    <p>프론트엔드 개발자 & 디자이너</p>
+    <h1>김민지</h1>
+    <p>돈가스와 도라에몽을 좋아하는 개발자</p>
   </header>
+
+  <section>
+    <img src="assets/picture1.jpg" alt="김민지 사진">
+  </section>
 
   <section>
     <h2>소개</h2>
     <p>
-      안녕하세요! 저는 사용자 경험과 디자인을 중시하는 프론트엔드 개발자입니다.  
-      React, Vue, HTML, CSS, JavaScript에 능숙하며, 새로운 기술을 배우는 것을 즐깁니다.
+      안녕하세요! 저는 세종대학교에서 전자정보통신공학과와 소프트웨어학과를 복수전공하고 있는 4학년 학생입니다.<br>
+      Computer Vision, 백엔드 개발, 그리고 소프트웨어 전반에 큰 관심을 가지고 있습니다.<br>
+      새로운 기술과 도전을 즐기며, 다양한 프로젝트에 참여하고 있습니다.
     </p>
+  </section>
+
+  <section>
+    <h2>기술 스택</h2>
+    <p><strong>언어:</strong> Python, C, C++, Java, Swift, Markdown</p>
+    <p><strong>프레임워크 & 라이브러리:</strong> PyTorch, OpenCV, FastAPI, Spring, Flask, OpenGL, ROS, Unreal Engine</p>
+    <p><strong>데이터베이스:</strong> MariaDB, MySQL, MongoDB</p>
+    <p><strong>DevOps & 툴:</strong> GitHub Actions, Docker, Nginx, Raspberry Pi, Arduino, Postman, Notion, Anaconda, nVIDIA CUDA</p>
+    <p><strong>OS:</strong> Linux, macOS, Windows</p>
+  </section>
+
+  <section>
+    <h2>수상</h2>
+    <p>2025 제 12회 세종대학교 SW•AI 해커톤 - 은상 🥈</p>
+    <img src="assets/picture3.jpg" alt="해커톤 사진">
   </section>
 
   <section>
     <h2>프로젝트</h2>
     <div class="projects">
       <div class="project-card">
-        <h3>포트폴리오 사이트</h3>
-        <p>개인 포트폴리오 사이트를 React로 제작했습니다. 반응형 디자인을 적용했습니다.</p>
-        <a href="#">자세히 보기</a>
+        <h3>AI 유실물 관리 시스템 (2025-1)</h3>
+        <p>CLIP 기반으로 유사 물건 이름과 설명 추출, DINOv2 + MongoDB를 활용한 이미지 매칭 및 알림 시스템 구축.</p>
+        <a href="https://github.com/arenran02/Capstone-AI-app" target="_blank">GitHub 레포지토리</a><br><br>
+        <img src="assets/project1.png" alt="프로젝트1">
       </div>
       <div class="project-card">
-        <h3>To-Do 앱</h3>
-        <p>간단한 할 일 관리 앱을 만들고 Firebase로 배포했습니다.</p>
-        <a href="#">자세히 보기</a>
+        <h3>RAG 기반 AI 챗봇 동아리 추천 시스템 (2025-1)</h3>
+        <p>FAISS와 Sentence Transformer로 벡터 기반 유사도 검색 및 GPT API 기반 추천 시스템 구현.</p>
+        <a href="https://github.com/OpenSW-3341/ClubFinder.AI" target="_blank">GitHub 레포지토리</a><br><br>
+        <img src="assets/project2.png" alt="프로젝트2">
       </div>
       <div class="project-card">
-        <h3>디자인 시스템</h3>
-        <p>공통 UI 컴포넌트 라이브러리를 설계하고 문서화했습니다.</p>
-        <a href="#">자세히 보기</a>
+        <h3>가구 이미지 3D 시뮬레이션 앱 (2024-2)</h3>
+        <p>Apple Vision Pro와 ARKit/RealityKit을 활용해 가구 이미지를 3D로 재구성하고 실제 공간에 배치.</p>
+      </div>
+      <div class="project-card">
+        <h3>Unreal Engine 프로젝트 (2024-2)</h3>
+        <p>Camera Actor view 캡처 및 HTTP 통신 기반 실시간 이미지 전송, Apple Vision Pro와의 연동 구현.</p>
       </div>
     </div>
   </section>
 
   <section>
     <h2>연락처</h2>
-    <p>Email: <a href="mailto:example@email.com">example@email.com</a></p>
-    <p>GitHub: <a href="https://github.com/yourusername" target="_blank">yourusername</a></p>
+    <p>Email: <a href="mailto:arenran02@naver.com">arenran02@naver.com</a></p>
+    <p>GitHub: <a href="https://github.com/arenran02" target="_blank">arenran02</a></p>
   </section>
 
   <footer>
-    &copy; 2025 홍길동. All rights reserved.
+    &copy; 2025 김민지. All rights reserved.
   </footer>
 </body>
 </html>
